--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grow_ur_cat",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
